# T-AIA-902

./: .gitignore  README.md  classes.dot  launch_user_mode.py  pyproject.toml  taxi_sarsa_10000_decayed_epsilon_greedy.ipynb
boostrap/: gymm.py  pyproject.toml
bootstrap/: gymm.py
common/: __init__.py  algorithms.py  configuration.json  environments.py  params.py  plots.py  policies.py  rewards.py  user_mode.py
taxi_driver/: README.md  evaluate_training_time.py  gymm.py  launch.py  pyproject.toml
taxi_driver/results/bruteforce/: taxi_bruteforce.ipynb
taxi_driver/results/monte_carlo/epsilon/: taxi_monte_carlo_0-1_decayed_epsilon_greedy.ipynb  taxi_monte_carlo_0-9_decayed_epsilon_greedy.ipynb
taxi_driver/results/monte_carlo/gamma/: taxi_monte_carlo_0-85_decayed_epsilon_greedy.ipynb  taxi_monte_carlo_0-90_decayed_epsilon_greedy.ipynb
taxi_driver/results/monte_carlo/learning_rate/: taxi_monte_carlo_0-1_decayed_epsilon_greedy.ipynb
taxi_driver/results/monte_carlo/min_epsilon/: taxi_monte_carlo_0-001_decayed_epsilon_greedy.ipynb  taxi_monte_carlo_0-5_decayed_epsilon_greedy.ipynb
taxi_driver/results/monte_carlo/steps/: taxi_monte_carlo_10000_decayed_epsilon_greedy.ipynb  taxi_monte_carlo_1000_decayed_epsilon_greedy.ipynb  taxi_monte_carlo_100_decayed_epsilon_greedy.ipynb  taxi_monte_carlo_50000_decayed_epsilon_greedy.ipynb
taxi_driver/results/q_learning/epsilon/: taxi_q_learning_0-1_decayed_epsilon_greedy.ipynb  taxi_q_learning_0-5_decayed_epsilon_greedy.ipynb  taxi_q_learning_0-9_decayed_epsilon_greedy.ipynb  taxi_q_learning_1_decayed_epsilon_greedy.ipynb
(+34 files in other folders)
