[tool.poetry]
name = "t-aia-902"
version = "0.1.0"
description = ""
authors = ["mgl <marius.glo@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
numpy = "^1.26.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
tqdm = "^4.62.3"
InquirerPy = "^0.3.4"
moviepy = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
