[tool.poetry]
name = "boostrap"
version = "0.1.0"
description = ""
authors = ["mgl <marius.glo@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
